# T5_SO3

./: README.md  pyproject.toml
GraphT5_3D/data/: constants.py  dataset.py  dispatcher.py  protein.py  protein_parser.py  tokenizer.py
GraphT5_3D/nn/: loss.py  model.py
GraphT5_3D/nn/modules/: RoPE.py  frame_averaging.py  norm.py  transformer.py
test/data/: test_dataset.py  test_dispatcher.py  test_protein.py  test_tokenizer.py
test/fixtures/: 8y4w.cif
test/nn/modules/: test_frame_averaging.py
